--- a/Project/HTML/test.html
+++ b/Project/HTML/test.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>:before Pseudo-element Example</title>
-<style>
-    .box {
-        width: 200px;
-        height: 100px;
-        background-color: lightblue;
-        text-align: center;
-        line-height: 100px;
-    }
-
-    .box:hover:before {
-        content: "Before ";
-        color: red;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/CSS/test.css">
 </head>
 <body>
-<div class="box">Content</div>
+    <div class="formcon">
+        <form class="formdiv1">
+            <input type="text">
+            <label>Username</label
+        </form>
+
+    </div>
 </body>
 </html>
