--- a/Project/HTML/Home.html
+++ b/Project/HTML/Home.html
@@ -262,18 +262,23 @@
     </div>
     </section> 
     <!-- Fourth Section Picture -->
-    <section id="hr1" class="hr_con">
-      <div class="hr"></div>
-    </section>
-    <section class="fourthSec">
-      <!-- Image  (Roshn Front) -->
-      <div class="con123">
-        <div class="roshnImgCon">
-          <div class="Header_con1">
+    <section class="imgBigCon">
+      <div class="imgCon">
+        <img src="/IMAGES/Roshn1.jpg" width="900px" alt="RoshnFront">
+        <div class="backgroundimg">
+          <div class="HeaderImg">
             <h1>Roshn Front</h1>
           </div>
+          <div class="PImg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti perspiciatis, 
+              officia vel voluptas, quod praesentium quas illo debitis corrupti aut provident optio consectetur,
+              tempore eius voluptatibus velit odit eos quam?</p>
+          </div>
         </div>
-      </div>
+    </div>
+    </section>
+    <section id="hr1" class="hr_con">
+      <div class="hr"></div>
     </section>
     <!-- Advise Section -->
     <section class="AdviseSec">
