--- a/Project/HTML/Home(English).html
+++ b/Project/HTML/Home(English).html
@@ -6,10 +6,10 @@
     <title>Home</title>
     <!-- Css Links -->
     <link rel="stylesheet" href="/CSS/NavBar.css" />
-    <link rel="stylesheet" href="/CSS/SecondSec.css" />
-    <link rel="stylesheet" href="/CSS/ThirdSec.css" />
-    <link rel="stylesheet" href="/CSS/FourthSec.css">
-    <link rel="stylesheet" href="/CSS/Form.css">
+    <link rel="stylesheet" href="/CSS/About.css" />
+    <link rel="stylesheet" href="/CSS/Cards.css" />
+    <link rel="stylesheet" href="/CSS/Footer.css">
+    <link rel="stylesheet" href="/CSS/Responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins"rel="stylesheet"/>
   </head>
   <body>
@@ -58,6 +58,10 @@
               </li>
             </ul>
           </div>
+          <a href="/HTML/Home(Arabic).html" class="LangChange">
+            <img src="/IMAGES/Langbtn.svg" alt="Language Changing Button">
+            <p><b>AR</b></p>
+          </a>
         </nav>
       </section>
       <!-- Heading -->
@@ -268,31 +272,113 @@
         <div class="backgroundimg">
           <div class="HeaderImg">
             <h1>Roshn Front</h1>
+            <section id="hr2" class="hr_con">
+              <div class="hr"></div>
+            </section>
           </div>
           <div class="PImg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti perspiciatis, 
-              officia vel voluptas, quod praesentium quas illo debitis corrupti aut provident optio consectetur,
-              tempore eius voluptatibus velit odit eos quam?</p>
+            <p>As a part of its efforts to bring a new way of integrated living to the Kingdom,
+              ROSHN has expanded its footprint in Riyadh by acquiring the ROSHN Front shopping and business area, located adjacent to ROSHN’s flagship development,
+              SEDRA. The acquisition enables ROSHN to become a multi-asset class real estate developer and manager of global significance.
+              An extraordinary urban experience that reimagines how we work, play, dine, shop,
+              and share space in the north of Riyadh. Integrating human-centered design and social spaces, ROSHN Front isn't just a place - it's a living hub of connection, curiosity and innovation.
+            </p>
           </div>
         </div>
     </div>
     </section>
-    <section id="hr1" class="hr_con">
-      <div class="hr"></div>
-    </section>
-    <!-- Advise Section -->
-    <section class="AdviseSec">
-      <div class="adHeader">
-        <h1> Looking For <br> Speacial Advising?</h1>
+<br><br><br><br><br><br><br>
+
+    <!-- Footer -->
+    <footer>
+      <!-- Icons -->
+      <div class="icons">
+        <div class="emailcon">
+        <img src="/IMAGES/email.svg" alt="Email Icon" width="50px">
+        <span>RiyadhGuidline@gov.sa</span>
       </div>
-      <div class="formcon">
-        <form>
-        <div class="formdiv1">
-            <input type="text">
-            <label>Username</label
+      <div class="emailcon">
+        <img src="/IMAGES/Tele.svg" alt="Telephone Icon" width="50px">
+        <span>+966 11 123 4567</span>
+      </div>
+      </div>
+      <!-- Advising Form -->
+        <div class="test">
+          <div id="left" class="else">
+            <div class="formBorder">
+              <h1>For individual Advising</h1>
+              <div class="form">
+                <form>
+                  <input placeholder="FirstName" type="text" required>
+                  <input class="left" placeholder="LastName" type="text" required>
+                  <input class="btm" placeholder="Email" type="email" required>
+                  <input class="btm" id="btm1" placeholder="Phone" type="tel" required>
+                <div class="msgCon">
+                  <input placeholder="Additional Massage" id="msg" type="text">
+                </div>
+                <div class="submitdiv">
+                  <input class="submit" type="submit" value="Submit">
+                </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <!-- Footer Content -->
+        <div id="right" class="else">
+          <div class="aboutFooter">
+            <a href="##">
+              <h3>About</h3>
+            </a>
+            <a href="##">
+              <p>Our Story</p>
+            </a>
+            <a href="##">
+              <p>Awards</p>
+            </a>
+            <a href="##">
+              <p>Our Team</p>
+            </a>
+            <a href="##">
+              <p>Career</p>
+            </a>
+          </div>
+          <div class="aboutFooter">
+            <a href="##">
+              <h3>Company</h3>
+            </a>
+            <a href="##">
+              <p>Our Services</p>
+            </a>
+            <a href="##">
+              <p>Clients</p>
+            </a>
+            <a href="##">
+              <p>Contact</p>
+            </a>
+            <a href="##">
+              <p>Press</p>
+            </a>
+          </div>
+          <div class="aboutFooter">
+            <a href="##">
+              <h3>Resources</h3>
+            </a>
+            <a href="##">
+              <p>Blog</p>
+            </a>
+            <a href="##">
+              <p>Newsletter</p>
+            </a>
+            <a href="##">
+              <p>Privacy Policy</p>
+            </a>
+            <a href="##">
+              <p>Career</p>
+            </a>
+          </div>
         </div>
-      </form>
-    </div>
-    </section>
+        </div>
+        <p class="copyright">&copy; All rights reserved to Riyadh Season GuideLine Oraganization</p>
+    </footer>
   </body>
 </html>
