--- a/Project/HTML/Home(Arabic).html
+++ b/Project/HTML/Home(Arabic).html
@@ -46,7 +46,7 @@
             <ul>
               <!-- Home -->
               <li>
-                <a href="/HTML/Home.html"><b>الرئيسية</b></a>
+                <a href="/HTML/Home(Arabic).html"><b>الرئيسية</b></a>
               </li>
               <!-- Recommendation -->
               <li>
@@ -54,7 +54,7 @@
               </li>
               <!-- Packages -->
               <li>
-                <a href=""><b>الحزم</b></a>
+                <a href="/HTML/Packages(Arabic).html"><b>الحزم</b></a>
               </li>
             </ul>
           </div>
@@ -364,8 +364,8 @@
           <a href="##">
             <h3>الموارد</h3>
           </a>
-          <a href="##">
-            <p>المدونة</p>
+          <a href="#Main">
+            <p>الرئيسية</p>
           </a>
           <a href="##">
             <p>النشرة الإخبارية</p>
