--- a/Project/HTML/Home(English).html
+++ b/Project/HTML/Home(English).html
@@ -46,7 +46,7 @@
             <ul>
               <!-- Home -->
               <li>
-                <a href="/HTML/Home.html"><b>Home</b></a>
+                <a href="/HTML/Home(English).html"><b>Home</b></a>
               </li>
               <!-- Recommendation -->
               <li>
@@ -54,7 +54,7 @@
               </li>
               <!-- Packages -->
               <li>
-                <a href=""><b>Packages</b></a>
+                <a href="/HTML/Packages(English).html"><b>Packages</b></a>
               </li>
             </ul>
           </div>
@@ -363,8 +363,8 @@
             <a href="##">
               <h3>Resources</h3>
             </a>
-            <a href="##">
-              <p>Blog</p>
+            <a href="#Main">
+              <p>Home</p>
             </a>
             <a href="##">
               <p>Newsletter</p>
